Finished editng exercises

--- a/exercises/M02-Exercises.ipynb
+++ b/exercises/M02-Exercises.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "id": "98734d49",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# M02 In-Class Exercises\n",
+    "# Python Introduction Exercises\n",
     "\n",
-    "DS 5100 Programming for Data Science"
+    "Programming for Data Science Bootcamp"
    ]
   },
   {
@@ -24,7 +26,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 2.1\n",
+    "# Exercise 1\n",
     "\n",
     "Define a string with a length `>= 6` and print:\n",
     "- the first three characters of the string\n",
@@ -119,7 +121,7 @@
     }
    },
    "source": [
-    "# Exercise 2.2\n",
+    "# Exercise 2\n",
     "\n",
     "Create a new list and assign three values to it. \n",
     "\n",
@@ -131,6 +133,7 @@
    "execution_count": 11,
    "id": "befcfd37-8500-488f-b229-a4e48da11ba2",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -161,6 +164,7 @@
    "execution_count": 12,
    "id": "cf7f3817",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -190,6 +194,7 @@
    "execution_count": 13,
    "id": "038317f9",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -217,6 +222,10 @@
    "execution_count": 14,
    "id": "565ac991",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
     "tags": []
    },
    "outputs": [],
@@ -229,6 +238,10 @@
    "execution_count": 15,
    "id": "c08161bb",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [
@@ -252,12 +265,14 @@
    "cell_type": "markdown",
    "id": "d020cc77-554d-43a4-a55a-4daba7774a8b",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 2.3\n",
+    "# Exercise 3\n",
     "\n",
     "Create to a tuple with three values.\n",
     "\n",
@@ -314,6 +329,7 @@
    "execution_count": 19,
    "id": "27283366",
    "metadata": {
+    "editable": true,
     "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
@@ -341,12 +357,14 @@
    "cell_type": "markdown",
    "id": "1c09feb7-8bba-42fb-b429-2e7cad4a336d",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 2.4\n",
+    "# Exercise 4\n",
     "\n",
     "Assign a string value to a scalar variable.\n",
     "\n",
@@ -360,6 +378,7 @@
    "execution_count": 20,
    "id": "59880a2b",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -376,8 +395,9 @@
    "execution_count": 21,
    "id": "5161c56c",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -402,6 +422,10 @@
    "execution_count": 22,
    "id": "a979a11a",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
     "tags": []
    },
    "outputs": [],
@@ -414,6 +438,10 @@
    "execution_count": 23,
    "id": "374a8be3",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
     "tags": []
    },
    "outputs": [
@@ -441,7 +469,7 @@
     }
    },
    "source": [
-    "# Exercise 2.5\n",
+    "# Exercise 5\n",
     "\n",
     "Create a dictionary containing at least three key-value pairs.\n",
     "\n",
@@ -566,7 +594,7 @@
     }
    },
    "source": [
-    "# Exercise 2.6\n",
+    "# Exercise 6\n",
     "\n",
     "Convert the following sentence into a set of lowercase words sorted alphabetically.\n",
     "\n",
@@ -580,6 +608,7 @@
    "execution_count": 31,
    "id": "96e3cc2d",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -595,6 +624,10 @@
    "execution_count": 36,
    "id": "54ce1b66-b3c4-44a9-b299-d3e2e6bd15b5",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
     "tags": []
    },
    "outputs": [
@@ -621,6 +654,10 @@
    "execution_count": 37,
    "id": "6ef2d7d2-dc32-4079-bc63-c2851003e965",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
     "tags": []
    },
    "outputs": [
@@ -646,6 +683,10 @@
    "execution_count": 39,
    "id": "766f462c",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [
@@ -673,7 +714,7 @@
     }
    },
    "source": [
-    "# Exercise 2.7 \n",
+    "# Exercise 7 \n",
     "\n",
     "Compare the lengths of the preceding list and set. \n",
     "\n",
@@ -685,6 +726,7 @@
    "execution_count": 40,
    "id": "2d5d2b21",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -701,8 +743,9 @@
    "execution_count": 41,
    "id": "ab1fe177",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -727,6 +770,10 @@
    "execution_count": 42,
    "id": "b9e3a968",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
     "tags": []
    },
    "outputs": [
@@ -754,7 +801,7 @@
     }
    },
    "source": [
-    "# Exercise 2.8\n",
+    "# Exercise 8\n",
     "\n",
     "Define three variables of any type.\n",
     "\n",
@@ -801,7 +848,7 @@
     }
    },
    "source": [
-    "# Exercise 2.9\n",
+    "# Exercise 9\n",
     "\n",
     "Define two variables, assigning them floating point values. \n",
     "\n",
@@ -815,6 +862,7 @@
    "execution_count": 44,
    "id": "4f65e6aa",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -832,6 +880,10 @@
    "execution_count": 45,
    "id": "6f0fe1ba",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
     "tags": []
    },
    "outputs": [
@@ -855,8 +907,9 @@
    "execution_count": 46,
    "id": "e22f1f1f",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -881,8 +934,9 @@
    "execution_count": 47,
    "id": "8b060145",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -896,6 +950,7 @@
    "execution_count": 48,
    "id": "983495f8",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -923,7 +978,7 @@
     }
    },
    "source": [
-    "# Exercise 2.10\n",
+    "# Exercise 10\n",
     "\n",
     "Write a Python program to print the input string in the format of the output:\n",
     "\n",
@@ -1045,12 +1100,17 @@
    "cell_type": "markdown",
    "id": "7ed9a153",
    "metadata": {
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 2.11\n",
+    "# Exercise 11\n",
     "\n",
     "Compute `a` and `b` as follows:\n",
     "\n",
@@ -1064,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "cab2c7bd",
    "metadata": {
     "slideshow": {
@@ -1072,7 +1132,18 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.1' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "a = 0.15 + 0.15\n",
     "b = 0.1 + 0.2"
@@ -1158,7 +1229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
