--- a/exercises/M03-Exercises.ipynb
+++ b/exercises/M03-Exercises.ipynb
@@ -10,9 +10,9 @@
     }
    },
    "source": [
-    "# M03 Exercises\n",
+    "# Python Control Structures Exercises\n",
     "\n",
-    "DS 5100 Programming for Data Science"
+    "Programming for Data Science Bootcamp"
    ]
   },
   {
@@ -25,7 +25,7 @@
     "tags": []
    },
    "source": [
-    "# Example 3.1\n",
+    "# Exercise 1\n",
     "\n",
     "What prints in the example below if `val = 5`? \n",
     "\n",
@@ -115,7 +115,7 @@
     }
    },
    "source": [
-    "# Exercise 3.2\n",
+    "# Exercise 2\n",
     "\n",
     "Write code that does the following:\n",
     "- Defines a list of integers `xx = [-2, 8, 0, 5, 6]`\n",
@@ -288,7 +288,7 @@
     "tags": []
    },
    "source": [
-    "# Example 3.3\n",
+    "# Exercise 3\n",
     "\n",
     "Write code that does the following:\n",
     "\n",
@@ -346,7 +346,7 @@
     }
    },
    "source": [
-    "# Exercise 3.4\n",
+    "# Exercise 4\n",
     "\n",
     "Create a list of four strings that are capitalized proper nouns.\n",
     "\n",
@@ -433,7 +433,7 @@
     }
    },
    "source": [
-    "# Exercise 3.5 \n",
+    "# Exercise 5 \n",
     "\n",
     "Using the list you made from the previous exercise, use `iter()` and `next()` to iterate over the list, printing each string.  \n",
     "\n",
@@ -517,7 +517,7 @@
     }
    },
    "source": [
-    "# Exercise 3.6\n",
+    "# Exercise 6\n",
     "\n",
     "Create a dictionary with two city names as keys and their zip codes as values. \n",
     "\n",
@@ -612,7 +612,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 3.7\n",
+    "# Exercise 7\n",
     "\n",
     "Using the dictionary from the previous exercise, use a `for` loop with `keys()` to print each key-value pair.  \n",
     "\n",
@@ -659,7 +659,7 @@
     }
    },
    "source": [
-    "# Exercise 3.8\n",
+    "# Exercise 8\n",
     "\n",
     "Write a list comprehension that takes a list of numeric values \\\n",
     "and returns a list of their cubes."
@@ -702,7 +702,7 @@
     }
    },
    "source": [
-    "# Exercise 3.9\n",
+    "# Exercise 9\n",
     "\n",
     "Create a list of seven $(7)$ strings that includes some numbers and some non-numbers. \n",
     "\n",
@@ -798,7 +798,7 @@
     }
    },
    "source": [
-    "# Exercise 3.10\n",
+    "# Exercise 10\n",
     "\n",
     "Given the dictionary `grid`, use a comprehension to retain only key-value pairs where the key contains the substring 'max':\n",
     "\n",
@@ -969,7 +969,7 @@
     }
    },
    "source": [
-    "# Exercise 3.11\n",
+    "# Exercise 11\n",
     "\n",
     "Given the dictionary `letter_to_idx` which maps some letters to index values,  \n",
     "use a dictionary comprehension to create a reversed dictionary, `idx_to_letter` \n",
