--- a/exercises/M04-Exercises.ipynb
+++ b/exercises/M04-Exercises.ipynb
@@ -9,9 +9,9 @@
     }
    },
    "source": [
-    "# M04 Exercises\n",
+    "# Python Functions Exercises\n",
     "\n",
-    "DS 5100 Programming for Data Science"
+    "Programming for Data Science Bootcamp"
    ]
   },
   {
@@ -35,7 +35,7 @@
     }
    },
    "source": [
-    "# Exercise 4.1\n",
+    "# Exercise 1\n",
     "\n",
     "Write a function with these requirements:\n",
     "\n",
@@ -142,7 +142,7 @@
     }
    },
    "source": [
-    "# Exercise 4.2\n",
+    "# Exercise 2\n",
     "\n",
     "Write a function with these requirements:\n",
     "- uses the argument unpacking operator, e.g. `*args`, for the input argument\n",
@@ -202,6 +202,7 @@
    "cell_type": "markdown",
    "id": "5360423a-f1b4-4280-b608-6dd95c7464a3",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -240,8 +241,9 @@
    "cell_type": "markdown",
    "id": "01edb7ab-1ffc-4037-98d0-ecae54fd6dae",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -285,7 +287,7 @@
     }
    },
    "source": [
-    "# Exercise 4.3\n",
+    "# Exercise 3\n",
     "\n",
     "Write a function called `make_numeronym()` that takes a long word and replaces it \n",
     "with a string that has the same first and last letters capitalized, \n",
@@ -302,9 +304,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "8920d8e9",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -313,7 +316,8 @@
    "outputs": [],
    "source": [
     "def make_numeronym(long_word):\n",
-    "    \"Converts a long word into word with internal letters replace by their count.\"\n",
+    "    \"\"\"Converts a long word into word with \n",
+    "    internal letters replaced by their count.\"\"\"\n",
     "    \n",
     "    # Validate data type\n",
     "    if not isinstance(long_word, str):\n",
@@ -322,7 +326,8 @@
     "\n",
     "    # Validate word length\n",
     "    elif len(long_word) < 4:\n",
-    "        print(f\"{long_word} is too short. Put in a word at least {min_len} letters long.\")\n",
+    "        print(f\"{long_word} is too short. \\\n",
+    "            Put in a word at least {min_len} letters long.\")\n",
     "        return False\n",
     "    \n",
     "    # Do the work ...\n",
@@ -337,9 +342,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "9bd424d4",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [
@@ -349,7 +358,7 @@
        "'L10N'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,6 +371,7 @@
    "cell_type": "markdown",
    "id": "e629fe12-3a9b-4f06-b556-a4c9851c7d18",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -373,30 +383,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "cb3337b6-32f2-44b3-9403-fcbd5fe5812f",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [],
    "source": [
     "def make_numeronym2(long_word):\n",
-    "    \"Converts a long word into word with internal letters replace by their count.\"\n",
+    "    \"\"\"Converts a long word into word with \n",
+    "    internal letters replace by their count.\"\"\"\n",
     "    \n",
     "    # Validate \n",
     "    if not isinstance(long_word, str) or len(long_word) < 4:\n",
-    "        print(f\"{long_word} is either not a string or is too short.\")\n",
+    "        print(f\"{long_word} not a string or too short.\")\n",
     "        return False\n",
     "    \n",
     "    # Do the work ...\n",
-    "    return f\"{long_word[0]}{len(long_word[1:-1])}{long_word[-1]}\".upper()"
+    "    return f\"{long_word[0]}{len(long_word[1:-1])}{long_word[-1]}\"\\\n",
+    "        .upper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "607c06a7-ff71-4b88-9097-2086baf3f12a",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [
@@ -406,7 +426,7 @@
        "'A26M'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,6 +439,7 @@
    "cell_type": "markdown",
    "id": "54e15828-0dd5-4710-a05b-885e49e36a03",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -430,21 +451,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "a0f5b039",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "get_shorty = lambda x: f\"{x[0]}{len(x[1:-1])}{x[-1]}\".upper() if isinstance(x, str) and len(x) > 3 else None"
+    "get_shorty = lambda x: f\"{x[0]}{len(x[1:-1])}{x[-1]}\".upper() \\\n",
+    "    if isinstance(x, str) and len(x) > 3 else None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "id": "a5120565",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [
@@ -454,7 +484,7 @@
        "'O16N'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,12 +497,14 @@
    "cell_type": "markdown",
    "id": "65f2a501",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 4.4\n",
+    "# Exercise 4\n",
     "\n",
     "Define a function with these requirements:\n",
     "- take one numeric (integer or float) value as input\n",
@@ -636,7 +668,7 @@
     }
    },
    "source": [
-    "# Exercise 4.5 \n",
+    "# Exercise 5 \n",
     "\n",
     "Write a function that defines and prints a variable called `secret_x`.  \n",
     "\n",
@@ -716,7 +748,7 @@
     }
    },
    "source": [
-    "# Exercise 4.6\n",
+    "# Exercise 6\n",
     "\n",
     "Read the following code blocks (to be displayed). \n",
     "\n",
@@ -1025,7 +1057,7 @@
     }
    },
    "source": [
-    "# Exercise 4.6\n",
+    "# Exercise 6\n",
     "\n",
     "Write a lambda function to check if a value is in a range: $x >= 10$ and $x <= 20$  \n",
     "   \n",
@@ -1108,7 +1140,7 @@
     }
    },
    "source": [
-    "# Exercise 4.7\n",
+    "# Exercise 7\n",
     "\n",
     "Generalize the lambda function `in_range`.\n",
     "\n",
@@ -1199,7 +1231,7 @@
     }
    },
    "source": [
-    "# Exercise 4.8\n",
+    "# Exercise 8\n",
     "\n",
     "Write a lambda function called `str_test` that checks if a given string is found in another string.\n",
     "\n",
@@ -1284,7 +1316,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 4.9\n",
+    "# Exercise 9\n",
     "\n",
     "Write three lambda functions:\n",
     "\n",
@@ -1386,6 +1418,7 @@
    "execution_count": 147,
    "id": "3c590232-83de-4bec-a775-06db04e41031",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -1393,7 +1426,8 @@
    },
    "outputs": [],
    "source": [
-    "t2t = lambda tval, target: int(f2c(tval) if target == 'c' else c2f(tval))"
+    "t2t = lambda tval, target: int(f2c(tval) if target == 'c' \\\n",
+    "                               else c2f(tval))"
    ]
   },
   {
@@ -1531,21 +1565,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 12,
    "id": "b922847d",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "t2t = lambda tval, target: int({'f': lambda cval: 1.8 * cval + 32, 'c': lambda fval: (fval - 32) / 1.8}[target](tval))"
+    "t2t = lambda tval, target: \\\n",
+    "    int({'f': lambda cval: 1.8 * cval + 32, 'c': \\\n",
+    "    lambda fval: (fval - 32) / 1.8}[target](tval))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 13,
    "id": "2e3a2a89-0975-4d88-80c5-3b804a2d0ab1",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [
@@ -1555,7 +1599,7 @@
        "113"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,6 +1612,7 @@
    "cell_type": "markdown",
    "id": "327b4959",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -1581,13 +1626,14 @@
    "cell_type": "markdown",
    "id": "06b03876",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
     "tags": []
    },
    "source": [
-    "# Exercise 4.10\n",
+    "# Exercise 10\n",
     "\n",
     "The Fibonacci sequence looks like this:\n",
     "\n",
@@ -1605,15 +1651,16 @@
     "Fib(6) = Fib(5) + Fib(4) = 5 + 3 = 8\n",
     "```\n",
     "\n",
-    "Use this pattern to generate the next 2 terms (by hand)"
+    "Use this pattern to generate the next $2$ terms (by hand)."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f0b2efc9-c438-4ed0-ae0a-16c5a9effe21",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -1628,6 +1675,7 @@
    "cell_type": "markdown",
    "id": "ea73b497",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -1639,7 +1687,7 @@
     "Specifically, write the function with these requirements:\n",
     "- takes an integer `n` as input\n",
     "- includes the rules that defines the sequence\n",
-    "- computes the **nth** term in the sequence, using recursion (the function will call itself)\n",
+    "- computes the $n^{th}$ term in the sequence, using recursion (the function will call itself)\n",
     "- returns the computed term\n",
     "- expects `n` to an integer $> 0$, but don't do error checking\n",
     "\n",
@@ -1651,6 +1699,7 @@
    "execution_count": 161,
    "id": "c259625d",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -1703,7 +1752,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 4.11\n",
+    "# Exercise 11\n",
     "\n",
     "Try writing a function to create the Fibonacci sequences without using recursion.\n",
     "\n",
@@ -1766,22 +1815,15 @@
     "tags": []
    },
    "source": [
-    "# Exercise 4.12\n",
-    "\n",
-    "Demonstration of variable interpolation\n",
+    "# Exercise 12\n",
     "\n",
     "Write a Python program that allows users to play the MadLibs® game, using the example story sheet provided. \n",
     "\n",
     "Capture the values for each blank by using the `input()` function.\n",
     "\n",
-    "About MadLibs®: In this game, a player is prompted to supply a series of parts of speech (noun, adjective, past tense noun, etc.)\n",
-    "while a second player adds these to a story sheet that \n",
-    "contains blanks for each response. The story is not visible to the player supplying the words.\n",
-    "Once all the blanks are filled, the second player reads the story aloud, which is often \n",
-    "funny because of the random way the words are assigned to the story.\n",
-    "\n",
     "This is an example of  MadLib story sheet: \n",
-    "```\n",
+    "\n",
+    "```plaintext\n",
     "Today I went to the zoo. I saw a(n) ___________(adjective)\n",
     "_____________(Noun) jumping up and down in its tree.\n",
     "He _____________(verb, past tense) __________(adverb)\n",
@@ -1799,45 +1841,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "c62701f1",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
-    }
+    },
+    "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Today I went to the zoo.\n",
-      "I saw a(n) dfsdf sdf jumping up and down in its tree.\n",
-      "He sdafsd fasd through the large tunnel that led to its fsad fasd.\n",
-      "I got some peanuts and passed them through the cage to a gigantic gray f towering above my head.\n",
-      "Feeding that animal made me hungry.\n",
-      "I went to get a asdf scoop of ice cream.\n",
-      "It filled my stomach.\n",
-      "Afterwards I had to sda f to catch our bus.\n",
-      "When I got home I sadf my mom for a ads day at the zoo.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def madlibs1():\n",
     "    \n",
     "    words = dict(adjective1 = '', \n",
-    "                 noun1 = '', \n",
-    "                 verb_past_tense1 = '', \n",
-    "                 adverb1 = '',\n",
-    "                 adjective2 = '', \n",
-    "                 noun2 = '', \n",
-    "                 noun3 = '', \n",
-    "                 adjective3 = '', \n",
-    "                 verb1 = '', \n",
-    "                 adverb2 = '', \n",
-    "                 verb_past_tense2 = '', \n",
-    "                 adjective4 = '')\n",
+    "        noun1 = '', verb_past_tense1 = '', adverb1 = '',\n",
+    "        adjective2 = '', noun2 = '', noun3 = '', adjective3 = '', \n",
+    "        verb1 = '', adverb2 = '', verb_past_tense2 = '', adjective4 = '')\n",
     "    \n",
     "    for pos in words:\n",
     "        prompt = pos.replace('_', ' ')[:-1] # Assumes single digit suffix\n",
@@ -1856,7 +1876,56 @@
     "mom for a {words['adjective4']} day at the zoo.\"\n",
     "    \n",
     "    print(text)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "45699ba2",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a(n) adjective:  green\n",
+      "Enter a(n) noun:  house\n",
+      "Enter a(n) verb past tense:  ran\n",
+      "Enter a(n) adverb:  quickly\n",
+      "Enter a(n) adjective:  happy\n",
+      "Enter a(n) noun:  carriage\n",
+      "Enter a(n) noun:  bacterium\n",
+      "Enter a(n) adjective:  blue\n",
+      "Enter a(n) verb:  flew\n",
+      "Enter a(n) adverb:  mightily\n",
+      "Enter a(n) verb past tense:  happened\n",
+      "Enter a(n) adjective:  fast\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today I went to the zoo.\n",
+      "I saw a(n) green house jumping up and down in its tree.\n",
+      "He ran quickly through the large tunnel that led to its happy carriage.\n",
+      "I got some peanuts and passed them through the cage to a gigantic gray bacterium towering above my head.\n",
+      "Feeding that animal made me hungry.\n",
+      "I went to get a blue scoop of ice cream.\n",
+      "It filled my stomach.\n",
+      "Afterwards I had to flew mightily to catch our bus.\n",
+      "When I got home I happened my mom for a fast day at the zoo.\n"
+     ]
+    }
+   ],
+   "source": [
     "madlibs1()"
    ]
   }
@@ -1878,7 +1947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -1942,11 +2011,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "c3b963de08c47c3b6758389c5e0978ad73698a111eb508d4e16b558edb8f4cbf"
-   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
