--- a/exercises/M10-Exercises.ipynb
+++ b/exercises/M10-Exercises.ipynb
@@ -11,9 +11,9 @@
     "tags": []
    },
    "source": [
-    "# M10 Exercises \n",
+    "# R Introduction Exercises \n",
     "\n",
-    "DS 5100 Programming for Data Science"
+    "Programming for Data Science Bootcamp"
    ]
   },
   {
@@ -25,7 +25,7 @@
     }
    },
    "source": [
-    "# Exercise 10.1\n",
+    "# Exercise 1\n",
     "\n",
     "Write an R script (not a function) to get the first 10 Fibonacci numbers.\n",
     "\n",
@@ -97,12 +97,14 @@
    "cell_type": "markdown",
    "id": "acd35b9c-a908-46b8-add5-42a98bb675dd",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 10.2\n",
+    "# Exercise 2\n",
     "\n",
     "Convert the previous code into a function that takes an argument of the length of the sequence.\n",
     "\n",
@@ -114,6 +116,7 @@
    "execution_count": 3,
    "id": "b7c5f77e",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -183,12 +186,14 @@
    "cell_type": "markdown",
    "id": "44fcbc2c-ec37-4909-ade5-1ae1933d1b36",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 10.3\n",
+    "# Exercise 3\n",
     "\n",
     "Write a function that takes a numeric $x$ and returns $1$ if $0 <= x <= 1$, else returns $0$.\n",
     "\n",
@@ -200,6 +205,7 @@
    "execution_count": 3,
    "id": "2ebe28cb-cbe6-4dc5-8bc3-ae572e0fbc36",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -235,12 +241,14 @@
    "cell_type": "markdown",
    "id": "5d577af4-8e8c-46c2-ad6a-af683d6090fc",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 10.4\n",
+    "# Exercise 4\n",
     "\n",
     "Apply the function to five values."
    ]
@@ -250,6 +258,7 @@
    "execution_count": 14,
    "id": "b0d76eb9-500b-4daf-b576-e48c9e8a0305",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -391,12 +400,14 @@
    "cell_type": "markdown",
    "id": "2a48a75d-dce0-429f-9f8d-ffd2e18bd2cf",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 10.5\n",
+    "# Exercise 5\n",
     "\n",
     "Write an R program that does the following: \n",
     "\n",
@@ -409,9 +420,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5011dc68-8cdf-43a2-a20c-53ed2cea205d",
+   "execution_count": 3,
+   "id": "4194c506-dcdf-4348-96b2-19277c1a48b7",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -426,21 +438,69 @@
      "output_type": "stream",
      "text": [
       "[1] \"First 10 letters in lower case:\"\n",
-      " [1] \"a\" \"b\" \"c\" \"d\" \"e\" \"f\" \"g\" \"h\" \"i\" \"j\"\n",
+      " [1] \"a\" \"b\" \"c\" \"d\" \"e\" \"f\" \"g\" \"h\" \"i\" \"j\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"First 10 letters in lower case:\")\n",
+    "print(head(letters, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fd0a33e6-d42f-4285-95d5-d4934940fbf8",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[1] \"Last 10 letters in upper case:\"\n",
-      " [1] \"Q\" \"R\" \"S\" \"T\" \"U\" \"V\" \"W\" \"X\" \"Y\" \"Z\"\n",
+      " [1] \"Q\" \"R\" \"S\" \"T\" \"U\" \"V\" \"W\" \"X\" \"Y\" \"Z\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Last 10 letters in upper case:\")\n",
+    "print(tail(LETTERS, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cc5fdf7d-2aed-416f-91a0-715bdc6000c6",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[1] \"Letters between 22nd to 24th letters in upper case:\"\n",
       "[1] \"V\" \"W\" \"X\"\n"
      ]
     }
    ],
    "source": [
-    "print(\"First 10 letters in lower case:\")\n",
-    "print(head(letters, 10))\n",
-    "\n",
-    "print(\"Last 10 letters in upper case:\")\n",
-    "print(tail(LETTERS, 10))\n",
-    "\n",
     "print(\"Letters between 22nd to 24th letters in upper case:\")\n",
     "print(LETTERS[22:24])"
    ]
@@ -449,8 +509,9 @@
    "cell_type": "markdown",
    "id": "39a634fc-db2c-47e2-824f-4a76c71c4374",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -460,9 +521,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "b8522786-af63-44fb-a983-f0752445bbae",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": [],
     "vscode": {
      "languageId": "r"
@@ -483,9 +548,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "4a419aec-0a09-4865-a4e8-cf706f9580d6",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
     "tags": []
    },
    "outputs": [
@@ -514,9 +583,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "dfce9167-7e9d-4111-bc83-fdf6281dc70a",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
     "tags": [],
     "vscode": {
      "languageId": "r"
@@ -539,13 +612,14 @@
    "cell_type": "markdown",
    "id": "af72298b-0929-4a6e-8b09-e15df1d09f4b",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
     "tags": []
    },
    "source": [
-    "# Exercise 10.6\n",
+    "# Exercise 6\n",
     "\n",
     "Write an R program that prints the numbers from $1$ to $100$.\n",
     "\n",
@@ -561,6 +635,7 @@
    "execution_count": 5,
    "id": "ded47bca-df6c-4481-aeed-9534950424ef",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -981,12 +1056,14 @@
    "cell_type": "markdown",
    "id": "d5ecf2b1-ecf8-4b1a-a0ed-9a3f64695feb",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 10.7\n",
+    "# Exercise 7\n",
     "\n",
     "Write an R program to get the unique elements of a given string and unique numbers of vector.\n",
     "\n",
@@ -998,6 +1075,7 @@
    "execution_count": 74,
    "id": "28a3503c-5561-4a8a-9c62-ef857c673782",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     },
@@ -1177,12 +1255,14 @@
    "cell_type": "markdown",
    "id": "77b2341c-d363-434a-b9ea-5d3e4354e11a",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 10.8\n",
+    "# Exercise 8\n",
     "\n",
     "Write an R program to find the maximum and the minimum value of a given vector.\n",
     "\n",
@@ -1194,9 +1274,11 @@
    "execution_count": 42,
    "id": "b7b759ea-fef8-46a3-b35c-678432e923d0",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
+    "tags": [],
     "vscode": {
      "languageId": "r"
     }
@@ -1225,12 +1307,14 @@
    "cell_type": "markdown",
    "id": "bb61e2a6-f8e5-40de-ae01-8eaae0cb1040",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 10.9\n",
+    "# Exercise 9\n",
     "\n",
     "Write an R program to \n",
     "- print a sequence of numbers from $20$ to $50$\n",
@@ -1241,10 +1325,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "10a7e37e-a074-4bea-8822-90a3c7f159b9",
+   "cell_type": "markdown",
+   "id": "b145604a-9680-4304-93b8-f56c71c70e34",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -1253,29 +1337,18 @@
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"Sequence of numbers from 20 to 50:\"\n",
-      " [1] 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44\n",
-      "[26] 45 46 47 48 49 50\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"Sequence of numbers from 20 to 50:\")\n",
-    "print(seq(20, 50))"
+    "Sequence of numbers from 20 to 50:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "620e3e74-8921-43d1-a7fd-b223c672ad06",
+   "execution_count": 10,
+   "id": "e2fd47aa-2eb8-43f8-b189-1f2ca67e74fb",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     },
     "tags": [],
     "vscode": {
@@ -1284,24 +1357,103 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"Mean of numbers from 20 to 60:\"\n",
-      "[1] 40\n"
-     ]
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>20</li><li>21</li><li>22</li><li>23</li><li>24</li><li>25</li><li>26</li><li>27</li><li>28</li><li>29</li><li>30</li><li>31</li><li>32</li><li>33</li><li>34</li><li>35</li><li>36</li><li>37</li><li>38</li><li>39</li><li>40</li><li>41</li><li>42</li><li>43</li><li>44</li><li>45</li><li>46</li><li>47</li><li>48</li><li>49</li><li>50</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 20\n",
+       "\\item 21\n",
+       "\\item 22\n",
+       "\\item 23\n",
+       "\\item 24\n",
+       "\\item 25\n",
+       "\\item 26\n",
+       "\\item 27\n",
+       "\\item 28\n",
+       "\\item 29\n",
+       "\\item 30\n",
+       "\\item 31\n",
+       "\\item 32\n",
+       "\\item 33\n",
+       "\\item 34\n",
+       "\\item 35\n",
+       "\\item 36\n",
+       "\\item 37\n",
+       "\\item 38\n",
+       "\\item 39\n",
+       "\\item 40\n",
+       "\\item 41\n",
+       "\\item 42\n",
+       "\\item 43\n",
+       "\\item 44\n",
+       "\\item 45\n",
+       "\\item 46\n",
+       "\\item 47\n",
+       "\\item 48\n",
+       "\\item 49\n",
+       "\\item 50\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 20\n",
+       "2. 21\n",
+       "3. 22\n",
+       "4. 23\n",
+       "5. 24\n",
+       "6. 25\n",
+       "7. 26\n",
+       "8. 27\n",
+       "9. 28\n",
+       "10. 29\n",
+       "11. 30\n",
+       "12. 31\n",
+       "13. 32\n",
+       "14. 33\n",
+       "15. 34\n",
+       "16. 35\n",
+       "17. 36\n",
+       "18. 37\n",
+       "19. 38\n",
+       "20. 39\n",
+       "21. 40\n",
+       "22. 41\n",
+       "23. 42\n",
+       "24. 43\n",
+       "25. 44\n",
+       "26. 45\n",
+       "27. 46\n",
+       "28. 47\n",
+       "29. 48\n",
+       "30. 49\n",
+       "31. 50\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44\n",
+       "[26] 45 46 47 48 49 50"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(\"Mean of numbers from 20 to 60:\")\n",
-    "print(mean(20:60))"
+    "seq(20, 50)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "8930af7e-cbee-4c90-8523-4c4fdb26a2c9",
+   "cell_type": "markdown",
+   "id": "d708dd3e-c57f-4594-addd-a0b7ba444beb",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -1310,32 +1462,115 @@
      "languageId": "r"
     }
    },
+   "source": [
+    "Mean of numbers from 20 to 60:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "62e68362-4efa-4de6-9ab2-789c8936f05c",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"Sum of numbers from 51 to 91:\"\n",
-      "[1] 2911\n"
-     ]
+     "data": {
+      "text/html": [
+       "40"
+      ],
+      "text/latex": [
+       "40"
+      ],
+      "text/markdown": [
+       "40"
+      ],
+      "text/plain": [
+       "[1] 40"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(\"Sum of numbers from 51 to 91:\")\n",
-    "print(sum(51:91))"
+    "mean(20:60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beab8d59-4676-4fa4-82ed-4d935823797b",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "source": [
+    "Sum of numbers from 51 to 91:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "46882e36-a3d4-4686-94d2-8700ae88ab27",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2911"
+      ],
+      "text/latex": [
+       "2911"
+      ],
+      "text/markdown": [
+       "2911"
+      ],
+      "text/plain": [
+       "[1] 2911"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sum(51:91)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "9f1ac6be-36be-46cd-a707-78d8db2109d7",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
     "tags": []
    },
    "source": [
-    "# Exercise 10.10\n",
+    "# Exercise 10\n",
     "\n",
     "Write an R program to create a data frame from four given vectors.\n",
     "\n",
@@ -1349,6 +1584,7 @@
    "execution_count": 113,
    "id": "23e9c9cc",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -1466,8 +1702,9 @@
    "execution_count": 119,
    "id": "79731789",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": [],
     "vscode": {
@@ -1501,12 +1738,14 @@
    "cell_type": "markdown",
    "id": "095e8d4d-6d8b-4c99-99a4-414c778c54f3",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 10.11\n",
+    "# Exercise 11\n",
     "\n",
     "Write an R program to extract 3rd and 5th rows with 1st and 3rd columns from the built in `airquality` data frame."
    ]
@@ -1516,9 +1755,11 @@
    "execution_count": 26,
    "id": "fd9be43e-6e85-4673-a43f-dc84d15dca01",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
+    "tags": [],
     "vscode": {
      "languageId": "r"
     }
@@ -1749,12 +1990,14 @@
    "cell_type": "markdown",
    "id": "fe5f6566",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 10.12\n",
+    "# Exercise 12\n",
     "\n",
     "Use the built-in data frame `mtcars` and create a plot to compare `mpg`, `cyl` (number of cylinders), and `hp` (horsepower)."
    ]
@@ -1764,6 +2007,7 @@
    "execution_count": 51,
    "id": "1c5ded4d",
    "metadata": {
+    "editable": true,
     "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
@@ -2027,7 +2271,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.3.1"
+   "version": "4.4.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
