--- a/exercises/M11-Exercises.ipynb
+++ b/exercises/M11-Exercises.ipynb
@@ -9,9 +9,9 @@
     }
    },
    "source": [
-    "# M11 Exercises\n",
+    "# R Dplyr Exercises\n",
     "\n",
-    "DS 5100 Programming for Data Science"
+    "Programming for Data Science Bootcamp"
    ]
   },
   {
@@ -23,7 +23,7 @@
     }
    },
    "source": [
-    "# Exercise 11.1\n",
+    "# Exercise 1\n",
     "\n",
     "Install Tidyverse"
    ]
@@ -72,7 +72,7 @@
     }
    },
    "source": [
-    "# Exercise 11.2\n",
+    "# Exercise 2\n",
     "\n",
     "We create a super simple tibble to use in the exercises.\n",
     "\n",
@@ -116,7 +116,7 @@
     }
    },
    "source": [
-    "# Exercise 11.3\n",
+    "# Exercise 3\n",
     "\n",
     "View the tibble."
    ]
@@ -255,7 +255,7 @@
     }
    },
    "source": [
-    "# Exercise 11.4\n",
+    "# Exercise 4\n",
     "\n",
     "Make sure you understand the difference between \n",
     "\n",
@@ -609,7 +609,7 @@
     }
    },
    "source": [
-    "# Exercise 11.5\n",
+    "# Exercise 5\n",
     "\n",
     "Sort the data by `math_score` from high to low. \n",
     "\n",
@@ -730,7 +730,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.6\n",
+    "# Exercise 6\n",
     "\n",
     "Sort the data by `name` in alphabetical order."
    ]
@@ -836,7 +836,7 @@
     }
    },
    "source": [
-    "# Exercise 11.7\n",
+    "# Exercise 7\n",
     "\n",
     "Sort the data by `sex` so females show up first. "
    ]
@@ -943,7 +943,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.8\n",
+    "# Exercise 8\n",
     "\n",
     "Sort the data by `school`, `teacher`, `sex`, `math_score`, and `reading_score`."
    ]
@@ -1062,7 +1062,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.9\n",
+    "# Exercise 9\n",
     "\n",
     "Select only `name`, `math_score`, and `reading_score`."
    ]
@@ -1169,7 +1169,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.10\n",
+    "# Exercise 10\n",
     "\n",
     "Select all of the columns except the `sex` column."
    ]
@@ -1276,7 +1276,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.11\n",
+    "# Exercise 11\n",
     "\n",
     "Select all of the columns except the `math_score` and\n",
     "`reading_score columns`."
@@ -1384,7 +1384,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.12\n",
+    "# Exercise 12\n",
     "\n",
     "Keep all of the columns but rearrange them so that `sex` is the\n",
     "first column."
@@ -1505,7 +1505,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.13\n",
+    "# Exercise 13\n",
     "\n",
     "Filter by students who are `male` and went to `south`."
    ]
@@ -1678,7 +1678,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.14\n",
+    "# Exercise 14\n",
     "\n",
     "Filter by students who did above average in math."
    ]
@@ -1773,7 +1773,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.15\n",
+    "# Exercise 15\n",
     "\n",
     "Use `filter()` to figure out how many students had a math\n",
     "score of $4$ or more and a reading score of $3$ or more."
@@ -1861,7 +1861,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.16\n",
+    "# Exercise 16\n",
     "\n",
     "Filter by students who got a $3$ or worse in either math or reading."
    ]
@@ -1952,7 +1952,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.17\n",
+    "# Exercise 17\n",
     "\n",
     "Filter by students who got a reading score of $2$, $3$, or $4$."
    ]
@@ -2183,7 +2183,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.18\n",
+    "# Exercise 18\n",
     "\n",
     "Filter by students who have a name that starts with `'m'`. \n",
     "\n",
@@ -2296,7 +2296,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.19\n",
+    "# Exercise 19\n",
     "\n",
     "Filter to teachers whose best math student got a score of $5$."
    ]
@@ -2393,7 +2393,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.20\n",
+    "# Exercise 20\n",
     "\n",
     "Filter to the sex with a mean math score of $4$."
    ]
@@ -2498,7 +2498,7 @@
     }
    },
    "source": [
-    "# Exercise 11.21\n",
+    "# Exercise 21\n",
     "\n",
     "Set the math and reading scores to $10$ times their original values."
    ]
@@ -2608,7 +2608,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.22\n",
+    "# Exercise 22\n",
     "\n",
     "Create a new column called `math_reading_avg` which is the\n",
     "average of a student's math and reading scores.\n",
@@ -2718,7 +2718,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.23\n",
+    "# Exercise 23\n",
     "\n",
     "Create a new column `high_math_achiever` that is an\n",
     "indicator of if a student got a 4 or better on their math score."
@@ -2826,7 +2826,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.24\n",
+    "# Exercise 24\n",
     "\n",
     "Create a new column `reading_score_centered` that is a\n",
     "student's reading score minus the mean of all students' reading scores."
@@ -2945,7 +2945,7 @@
     }
    },
    "source": [
-    "# Exercise 11.25\n",
+    "# Exercise 25\n",
     "\n",
     "Create a new column called `science_score` that adds the square of `math_score` to `reading_score`.\n",
     "\n",
@@ -3067,7 +3067,7 @@
     }
    },
    "source": [
-    "# Exercise 11.26\n",
+    "# Exercise 26\n",
     "\n",
     "Create a `math_score_centered_by_sex` column that subtracts a student's `math_score` from the mean `math_score` by sex.\n",
     "\n",
@@ -3215,7 +3215,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.27\n",
+    "# Exercise 27\n",
     "\n",
     "Create a `reading_score_centered_by_teacher` column. "
    ]
@@ -3332,7 +3332,7 @@
     }
    },
    "source": [
-    "# Exercise 11.28\n",
+    "# Exercise 28\n",
     "\n",
     "Make a `number_of_students_in_class` column that is number\n",
     "of students in a teacher’s class. \n",
@@ -3465,7 +3465,7 @@
     }
    },
    "source": [
-    "# Exercise 11.29\n",
+    "# Exercise 29\n",
     "\n",
     "Use `summarize()` command to find the mean math score for\n",
     "all students."
@@ -3556,7 +3556,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.30\n",
+    "# Exercise 30\n",
     "\n",
     "Find the mean reading score for all students."
    ]
@@ -3629,7 +3629,7 @@
     }
    },
    "source": [
-    "# Exercise 11.31\n",
+    "# Exercise 31\n",
     "\n",
     "Find the mean for math scores and reading scores added together.\n",
     "\n",
@@ -3716,7 +3716,7 @@
     }
    },
    "source": [
-    "# Exercise 11.32\n",
+    "# Exercise 32\n",
     "\n",
     "Find the minimum math score for each school."
    ]
@@ -3795,7 +3795,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.33\n",
+    "# Exercise 33\n",
     "\n",
     "Find the maximum math score for each teacher."
    ]
@@ -3953,12 +3953,14 @@
    "cell_type": "markdown",
    "id": "7e42fab5-2340-490d-9c58-58583dae5e1a",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 11.34\n",
+    "# Exercise 34\n",
     "\n",
     "If we grouped by sex, and then summarized with the minimum\n",
     "reading score, how many rows would the resulting data frame have?"
@@ -3990,8 +3992,9 @@
    "execution_count": 135,
    "id": "c4a43495-488c-4766-bbe8-832624cb27a8",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": [],
     "vscode": {
@@ -4060,7 +4063,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.35\n",
+    "# Exercise 35\n",
     "\n",
     "Create a data frame with the mean and median reading score\n",
     "by sex, as well as the number of students of that sex."
@@ -4153,7 +4156,7 @@
     }
    },
    "source": [
-    "# Exercise 11.36\n",
+    "# Exercise 36\n",
     "\n",
     "Select just the `name` and `math_score` columns. \n",
     "\n",
@@ -4266,7 +4269,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.37\n",
+    "# Exercise 37\n",
     "\n",
     "Select every column except the teacher column. \n",
     "\n",
@@ -4378,7 +4381,7 @@
     "tags": []
    },
    "source": [
-    "# Exercise 11.38\n",
+    "# Exercise 38\n",
     "\n",
     "Remove any students with `'smith'` as a teacher, then find the\n",
     "mean `math_score` by `sex`."
@@ -4458,7 +4461,7 @@
     }
    },
    "source": [
-    "# Exercise 11.39\n",
+    "# Exercise 39\n",
     "\n",
     "Find the min, max, and median `reading_score` for female\n",
     "students at south school."
@@ -4530,12 +4533,14 @@
    "cell_type": "markdown",
    "id": "599dc7ea-b8b8-4950-a721-525a1e238b72",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Exercise 11.40\n",
+    "# Exercise 40\n",
     "\n",
     "Inspect each of the following code blocks. They both do\n",
     "about the same thing. Which one do you think is preffered from a\n",
@@ -4546,9 +4551,11 @@
    "cell_type": "markdown",
    "id": "03f62254-8975-43dc-aa96-30f2ea6cce9c",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "-"
-    }
+     "slide_type": "subslide"
+    },
+    "tags": []
    },
    "source": [
     "**Code block 1**"
@@ -4559,9 +4566,12 @@
    "execution_count": 157,
    "id": "9ac0cc5f-46c7-48b0-9a94-f6bef40cdee8",
    "metadata": {
+    "editable": true,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     },
+    "tags": [],
     "vscode": {
      "languageId": "r"
     }
@@ -4631,9 +4641,11 @@
    "cell_type": "markdown",
    "id": "3e93c90c-e45c-4b9f-8a01-fbfb365ba703",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "-"
-    }
+     "slide_type": "subslide"
+    },
+    "tags": []
    },
    "source": [
     "**Code block 2**"
@@ -4644,9 +4656,11 @@
    "execution_count": 146,
    "id": "f7eed92e-d20f-4719-beac-138a430ea31f",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "-"
     },
+    "tags": [],
     "vscode": {
      "languageId": "r"
     }
@@ -4708,9 +4722,11 @@
    "cell_type": "markdown",
    "id": "199d5159-b8b7-4418-8541-10c731976fb5",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "**Answer:** They both get the max math score by teacher for teachers at south school. The first block calculates the `max_math_score` for both north and south and then filters out north after that calculation. The second block filters out north right away. This is preferred because it prevents the computer from making unnecessary calculations.\n",
@@ -4793,7 +4809,13 @@
   {
    "cell_type": "markdown",
    "id": "c08157ea-f5b7-4c4d-86cd-0e22e798a636",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Credits"
    ]
@@ -4820,7 +4842,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.3.1"
+   "version": "4.4.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
