--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 # Welcome
 
-**Welcome to the companion text for DS 5100 Programming for Data Science.**
+**Welcome to the companion text for Programming for Data Science Bootcamp.**
 
-This text is designed to provide all the content necessary to take DS 5100 at UVA's [School of Data Science](https://datascience.virginia.edu/). The course provides an introduction to programming from a data science perspective. It focuses on the development of basic skills in Python and R Programming, as well the command line and GitHub. It is currently one of two foundational courses taught, along with a course in linear models.
+This text is designed to provide all the content necessary to take the Programming for Data Science Bootcamps course at UVA's [School of Data Science](https://datascience.virginia.edu/).
 
 [![](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/ontoligent/programming-for-data-science/HEAD)
